2011-01-26  John W. Eaton  <jwe@octave.org>

	* interpreter/mk_doc_cache.m, interpreter/mkoctfile.1,
	interpreter/munge-texi.cc, interpreter/doccheck/mk_undocumented_list:
	Strip trailing whitespace.

2011-01-26  Rik  <octave@nomad.inbox5.com>

	* interpreter/octave-bug.1: Delete obsolete man page
	* interpreter/Makefile.am: Stop distributing octave-bug.1 man page.

2011-01-26  Olaf Till <olaf.till@uni-jena.de>

	* interpreter/package.txi: Document variables MKOCTFILE,
	OCTAVE_CONFIG, and OCTAVE exported by pkg for configure and make.

2011-01-25  Rik  <octave@nomad.inbox5.com>

	* Makefile.am: Remove pass-through rules for AUTHORS, BUGS, and
	INSTALL.OCTAVE which are no longer required.

2011-01-24  Rik  <octave@nomad.inbox5.com>

	* Makefile.am, interpreter/Makefile.am: Add rule to build AUTHORS file.
	* interpreter/preface.txi: Add @ifclear rule to build AUTHORS file.

2011-01-23  Rik  <octave@nomad.inbox5.com>

	* interpreter/install.txi: Redo build instructions for release 3.4.
	* interpreter/doccheck/aspell-octave.en.pws: Add new words to
	Octave private dictionary from install.txi

2011-01-20  Rik  <octave@nomad.inbox5.com>

	* doc/interpreter/diagperm.txi, doc/interpreter/linalg.txi,
	doc/interpreter/sparse.txi: Use non-breaking spaces between certain
	adjectives and their linked nouns in docstrings.

2011-01-20  Rik  <octave@nomad.inbox5.com>

	* doc/interpreter/doccheck/README: Update documentation for
	documentation scripts.

2011-01-20  Rik  <octave@nomad.inbox5.com>

	* doc/interpreter/doccheck/aspell-octave.en.pws,
	doc/interpreter/plot.txi: Use @nospell macro on certain words in
	docstring.

2011-01-20  John W. Eaton  <jwe@octave.org>

	* faq/OctaveFAQ.texi, interpreter/doccheck/aspell-octave.en.pws,
	interpreter/octave.texi, interpreter/plot.txi: Update for
	backend -> graphics_toolkit change.

	* interpreter/interpimages.m, interpreter/geometryimages.m,
	interpreter/sparseimages.m, interpreter/plotimages.m:
	Call graphics_toolkit, not backend.
