@@ -52,7 +52,7 @@
 ## Cubic interpolation from four nearest neighbors (not implemented yet).
 ##
 ## @item 'spline'
-## Cubic spline interpolation--smooth first and second derivatives
+## Cubic spline interpolation---smooth first and second derivatives
 ## throughout the curve.
 ## @end table
 ##
